--- a/AutoLogistics/AutoLogistics.csproj
+++ b/AutoLogistics/AutoLogistics.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Automatic\Automatic.csproj" />
+  </ItemGroup>
+
 </Project>
