--- a/TestApp/TestApp.csproj
+++ b/TestApp/TestApp.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AutoLogistics\AutoLogistics.csproj" />
+    <ProjectReference Include="..\Automatic\Automatic.csproj" />
   </ItemGroup>
 
 </Project>
