--- a/TestApp/TestApp.csproj
+++ b/TestApp/TestApp.csproj
@@ -1,9 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="items.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="items.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.113.6" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AutoLogistics\AutoLogistics.csproj" />
